# altimeter_plugin

hector_quadrotor_description/urdf/: altimeter_sensor.gazebo.xacro
hector_quadrotor_gazebo_plugins/: CMakeLists.txt  package.xml
hector_uav_msgs/: CMakeLists.txt
